fix: gaps between grid

--- a/src/app/game/game-result/game-result.component.scss
+++ b/src/app/game/game-result/game-result.component.scss
@@ -5,9 +5,9 @@
 }
 #result-card-container {
   display: grid;
-  column-gap: 1em;
-  row-gap: 1em;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin: auto;
+  width: 90%;
 }
 #result-card-container > div {
   display: grid;
